--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           DATABASE_USER: postgres
           DATABASE_PASSWORD: postgres
           DATABASE_NAME: app_test_DB
-          POKEMON_API_URL: https://pokeapi.co/api/v2          
+          POKEMON_API_URL: https://pokeapi.co/api/v2
+          JWT_SECRET: th-2026%notif_/dev$$   
       # Service container image
       - image: cimg/postgres:16.0
         environment:
