--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#CONFIGURACION DB (deben coincidir con .env.postgres)
+#CONFIGURACION DB
 DATABASE_HOST=127.0.0.1
 DATABASE_NAME=app_dev
 DATABASE_USER=app_dev_user
@@ -7,4 +7,7 @@ DATABASE_PORT=5433
 
 #POKEMON API
 POKEMON_API_URL=https://pokeapi.co/api/v2
+
+#JWT_SECRET
+JWT_SECRET=th-2026%notif_/dev$$
 
