--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 #CONFIGURACION DB
-DATABASE_HOST=127.0.0.1
-DATABASE_NAME=app_dev
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
 DATABASE_USER=app_dev_user
 DATABASE_PASSWORD=app_dev_password
-DATABASE_PORT=5433
-
-#POKEMON API
-POKEMON_API_URL=https://pokeapi.co/api/v2
+DATABASE_NAME=app_dev
+DATABASE_SYNC=true
 
 #JWT_SECRET
 JWT_SECRET=th-2026%notif_/dev$$
